<resources>
    <string name="app_name">Proyecto1</string>
    <string name="titulo1">Golden Retriever</string>
    <string name="boton1">Caracter</string>
    <string name="btn1">Caracter</string>
    <string name="titulo2">Caracter</string>
    <string name="btn2">Menu</string>
    <string name="titulo3">Tamaño y peso</string>
    <string name="btn3">Inicio</string>
    <string name="btn4">Tamaño/peso</string>
    <string name="btn5">Color</string>
    <string name="btn6">precio</string>
    <string name="btn7">Salud / enfermedades</string>
    <string name="titulo4">Color</string>
    <string name="titulo5">Precio</string>
    <string name="titulo6">Salud / Enferdedades</string>
    <string name="btn8">Inicio</string>
    <string name="btn9">Inicio</string>
    <string name="btn10">Inicio</string>
    <string name="btn11">Origen</string>
    <string name="btn12">Clases/golden</string>
    <string name="btn13">¿Que fruta puede comer?</string>
    <string name="titulo7">Origen</string>
    <string name="titulo8">Clases</string>
    <string name="titulo9">¿Que fruta puede comer?</string>
    <string name="btn14">Button</string>
    <string name="btn15">Button</string>
    <string name="btn16">Button</string>
    <string name="titulo17">Salud</string>
    <string name="titulo18">Salud</string>
    <string name="vimagen">imagenes</string>
    <string name="btn20">¿Que es retriver?</string>
    <string name="btn21">¿Como calcular su edad?</string>
    <string name="titulo22">¿Que es retriver?</string>
    <string name="btn22">Inicio</string>
    <string name="btn23">Inicio</string>
    <string name="titulo25">¿Como calcular su edad?</string>
    <string name="texto1">Esta raza se distingue por su buen carácter, ya que los Golden retriever son perros alegres, amistosos, bondadosos, confiados, sociables, y muy poco territoriales. Son amigos de todo el mundo, y no se apegan solamente a una persona.</string>
    <string name="texto2">No son agresivos, ni desconfiados de los extraños, por lo cual no son buenos perros guardianes. Sin embargo son fáciles de entrenar, y con una buena socialización harán las delicias de cualquier familia y tratarán a los niños con paciencia infinita y gran docilidad.</string>
    <string name="texto3">Adoran las caricias, los mimos, los juegos, los paseos y todo tipo de interacción con las personas.</string>
    <string name="btn40">Inicio</string>
    <string name="texto4"><![CDATA[> Tamaño: grande]]></string>
    <string name="texto5"><![CDATA[> Peso del golden retriever: macho 30-34 kilos, hembra 25-32 kilos.]]></string>
    <string name="texto6"><![CDATA[> Altura a la cruz: macho 56-61 cm., hembra 51-56 cm.]]></string>
    <string name="texto7"><![CDATA[> Clasificación FCI: Grupo 8, sección 1 «perros cobradores de caza» (con prueba de trabajo).]]></string>
    <string name="texto8"><![CDATA[> Otros nombres: Cobrador dorado, perdiguero dorado.]]></string>
    <string name="texto9"><![CDATA[> Origen: Gran Bretaña]]></string>
    <string name="texto10">Los perros golden retriever pueden ser de los siguientes colores:</string>
    <string name="texto11"><![CDATA[> Dorado, en cualquier tonalidad de oro]]></string>
    <string name="texto12"><![CDATA[> Marrón dorado suave]]></string>
    <string name="texto13"><![CDATA[> Arena]]></string>
    <string name="texto14"><![CDATA[> Crema, incluso en tonos muy claros.]]></string>
    <string name="texto15">Se permiten algunos pelos blancos en el pecho. Pero no se admite el golden retriever blanco, ni manchas blancas en los colores antes mencionados. Tampoco se admiten colores rojos ni caoba.</string>
    <string name="texto20">El precio del golden retriever es 350 hasta 1.200 euros. Esto depende de las líneas genéticas del perro, su calidad y belleza, las vacunas y documentos oficiales que se aporten, sus premios internacionales y la reputación del criador.</string>
    <string name="texto21">Si vas a comprar un golden retriever contacta siempre criadores responsables de la raza, visita sus instalaciones y conoce a los cachorros y a sus padres. Siempre es preferible que los cachorros sean criados en ambiente familiar. Nunca compres en tiendas de mascotas ni en criaderos de cachorros multi raza, que te impidan visitar sus instalaciones, al cachorro y a sus progenitores.</string>
    <string name="tituolo50">Salud y enfermedades</string>
    <string name="texto22"><![CDATA[> Displasia de cadera, que causa cojera, dificultades en la movilidad, y dolor articular crónico.]]></string>
    <string name="texto23">Los perros golden pueden padecer alguna de estas enfermedades</string>
    <string name="texto24"><![CDATA[> Otitis e infecciones del oído, debido a sus orejas colgantes]]></string>
    <string name="texto25"><![CDATA[> Cáncer: tiene una incidencia exagerada en los golden retriever. Se estima que el 60% de estos perros mueren de cáncer.]]></string>
    <string name="texto26"><![CDATA[> Tendencia a la obesidad, por lo que debemos vigilar la cantidad de comida diaria que le ofrecemos.]]></string>
    <string name="texto27"><![CDATA[> Displasia de codo y cataratas hereditarias]]></string>
    <string name="btn50">Inicio</string>
    <string name="text1">La historia del golden retriever es la historia de una raza con estrella, de una raza que logró superar con creces la imaginación de quienes se animaron a soñar con el perro de caza perfecto. También es la historia de la alegría, el amor, la entrega y la solidaridad, plasmadas en la devoción del perro por el ser humano. En pocas palabras, es la historia de un perro cazador que se convirtió en un perro humanitario.</string>
    <string name="text2">En este artículo de ExpertoAnimal te vamos a contar como surgió esta raza mediante el cruce de otras varias, hasta llegar a ser una de las más conocidas. Si te gustan estos canes, también te puede interesar los cuidados del pelo del golden retriever o nombres para perros golden retriever.</string>
    <string name="b1">Inicio</string>
    <string name="text3">Descubre a continuación los 6 tipos de retriever que existen:</string>
    <string name="text4">1. Golden retriever</string>
    <string name="text5">2. Labrador retriever</string>
    <string name="text6">3. Nova scotia duck tolling retriever</string>
    <string name="text7">4. Flat coated retriever</string>
    <string name="text8">5. Curly coated retriever</string>
    <string name="text9">6. Chesapeake bay retriever</string>
    <string name="tex1">El especialista explica que el primer año de un cachorro correspondería a los primeros 15 o 16 años de un humano, puesto que en ese periodo de tiempo, el perro desarrolla todo lo que las personas desarrollamos entre la infancia y la adolescencia. Por lo mismo, un perro de 2 años correspondería a un adulto joven de 24 años aproximadamente, y para los siguientes 3 años, él recomienda añadirles 5 años más. Cuando el perro ya llega a los 5 años, es donde el tamaño del perro comienza a importar. Según Coren, las razas pequeñas envejecen 4 años por cada uno que pasa; las medianas 6 años y las razas grandes 7 u 8 años. Por lo tanto, cuando un perro pequeño tiene 8 años humanos, tiene aproximadamente 51 años perrunos, mientras que un perro de tamaño grande de la misma edad, tendría aproximadamente 60 años.</string>
    <string name="btn60">Inicio</string>
    <string name="text50">10 frutas deliciosas que tu perro puede comer Kiwi. Zarzamoras / Frambuesas. ... Sandía. ... Moras azules. ... Melón. ... Manzana. Cuidado con el corazón y las semillas que son muy tóxicos, así que no se los des. ... Pera Quítale las semillas. Entre 1 y 3 rebanadas delgadas es suficiente, dependiendo de la talla de tu perro. ... Plátano. No le des la cáscara. ...</string>
    <string name="textF">Los retriever pertenecen al grupo de perros de deportes según el American Kennel Club, junto con los pointers, setters y spaniels. Todos estos perros tienen increíbles instintos en el agua y en el bosque por lo que son perfectos para cazar y para otras actividades en el campo. Las razas de retrievers reconocidas por el AKC son el retriever de Nueva Escocia, el labrador retriever, el golden retriever, el Chesapeake Bay retriever, el retriever de pelo rizado y el retriever de pelo liso.</string>
</resources>
